test/org/midica/testfiles/failing/eff-flow-ctrl-with-lsb.midica
INCLUDE inc/instruments.midica


0: ctrl=0/11.set(50)
